Minor bib edits

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1065,7 +1065,7 @@ pages = {427--451}
 __author={Koen Vanhoof and Beno\^{i}t Depaire},
 author={K. Vanhoof and B. Depaire},
   booktitle={Proceedings of the International Conference on Intelligent Systems and Knowledge Engineering},
-  series={ISKE '10},
+  series={ISKE~'10},
   title={Structure of association rule classifiers: {A} review},
   year={2010},
   pages={9--12}
@@ -1508,7 +1508,7 @@ pages={19--28}
 @article{ClarkNiblett1989,
 author={P. Clark and T. Niblett},
 year={1989},
-title={The CN2 induction algorithm},
+title={The {CN2} induction algorithm},
 journal={Machine Learning},
 volume={3},
 issue={4},
