Add Cynthia's new COMPAS survey paragraph and fix layout

--- a/paper/sections/appendix-bounds.tex
+++ b/paper/sections/appendix-bounds.tex
@@ -427,7 +427,7 @@ and~\eqref{eq:equiv-analogous-optimal} to obtain the desired inequality in~\eqre
 = \min_{\RLB' \in \StartsWith(\PrefixB)} \Obj(\RLB', \x, \y). \nn
 \end{align}
 
-\clearpage
+%\clearpage
 \section{Proof of Theorem~\ref{thm:similar} (Similar support bound)}
 \label{appendix:similar-supp}
 
