--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -24,7 +24,7 @@ Note that we exclude the `current charge' attribute (which has two categorical v
 `misdemeanor' and `felony'); for individuals in the dataset booked on multiple charges,
 this attribute does not appear to consistently reflect the most serious charge.
 
-\begin{table}[h!]
+\begin{table}[t!]
 \centering
 %$Q_\text{max}$ $K_\text{max}$
 \begin{tabular}{l  | c  c  c}
@@ -48,7 +48,7 @@ the number of juvenile crimes that were neither felonies nor misdemeanors (not s
 \label{tab:recidivism-data}
 \end{table}
 
-\clearpage
+%\clearpage
 \textbf{NYCLU stop-and-frisk dataset.} The original dataset contains 45,787 records,
 each describing an incident involving a stopped person; the individual
 was frisked in 30,345 (66.3\%) of records and and searched in 7,283 (15.9\%).
@@ -77,7 +77,7 @@ as well as negations of the 18 antecedents corresponding to the two features
 \emph{stop reason} and \emph{additional circumstances},
 which gives a total of 46 antecedents.
 
-\begin{table}[h!]
+\begin{table}[t!]
 \centering
 %$Q_\text{max}$ $K_\text{max}$
 \begin{tabular}{l | c  c}
