Add refs for survey, punctuation, layout

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -930,6 +930,13 @@ author = {{New York Civil Liberties Union}},
 year = 2014
 }
 
+@misc{compas-survey:2016,
+title = {{COMPAS} ``{CORE}'' risk and needs assessment},
+note = {\url{https://www.documentcloud.org/documents/2702103-Sample-Risk-Assessment-COMPAS-CORE.html}. {Contributed by J. Angwin, ProPublica}},
+author = {Northpointe},
+year = 2016
+}
+
 @InProceedings{Simon11,
 author = {Gy\"{o}rgy J. Simon and Vipin Kumar and Peter W. Li},
 title = {A Simple Statistical Model and Association Rule Filtering for Classification},
