--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -1,3 +1,4 @@
+\clearpage
 \section{Data processing details and antecedent mining}
 \label{appendix:data}
 
@@ -24,7 +25,7 @@ Note that we exclude the `current charge' attribute (which has two categorical v
 `misdemeanor' and `felony'); for individuals in the dataset booked on multiple charges,
 this attribute does not appear to consistently reflect the most serious charge.
 
-\begin{table}[t!]
+\begin{table}[h!]
 \centering
 %$Q_\text{max}$ $K_\text{max}$
 \begin{tabular}{l  | c  c  c}
@@ -77,7 +78,7 @@ as well as negations of the 18 antecedents corresponding to the two features
 \emph{stop reason} and \emph{additional circumstances},
 which gives a total of 46 antecedents.
 
-\begin{table}[t!]
+\begin{table}[h!]
 \centering
 %$Q_\text{max}$ $K_\text{max}$
 \begin{tabular}{l | c  c}
@@ -107,7 +108,7 @@ inside or outside & inside, outside & 2 \\
 \label{tab:frisk-data}
 \end{table}
 
-\clearpage
+%\clearpage
 \section{Example optimal rule lists, for different values of~$\Reg$}
 \label{appendix:examples}
 
