--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -277,16 +277,17 @@ Many of COMPAS's survey questions are direct inquiries about socioeconomic statu
 (``Is it easy to get drugs in your neighborhood?,''
 ``How often do you have barely enough money to get by?,''
 ``Do you frequently get jobs that don't pay more than minimum wage?,''
-``How often have you moved in the last 12 months?'')
+``How often have you moved in the last~12 months?'')
 or events that were not caused by the person who is being evaluated
-(``If you lived with both parents and they later separated, how old were you at the time?'',
-``Was one of you parents ever sent to jail or prison?'',
-``Was your mother ever arrested, that you know of?'').
+(``If you lived with both parents and they later separated, how old were you at the time?,''
+``Was one of you parents ever sent to jail or prison?,''
+``Was your mother ever arrested, that you know of?'')
+\citep{compas-survey:2016,AngwinLaMaKi16}.
 %
 It is not clear that such questions should be asked when evaluating recidivism risk,
 particularly if they are unnecessary (and as our analysis indicates, they are unnecessary).
 %
-Further, the fact that COMPAS requires over 130 questions answered,
+Further, the fact that COMPAS requires over~130 questions answered,
 many of whose answers may not be able to be verified,
 means that the computation of the COMPAS score is prone to errors.
 
