Note statements about COMPAS that probably need to be modified

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -262,13 +262,13 @@ There are many definitions of fairness, and it is not clear whether these models
 %
 Additional fairness constraints or transparency constraints can be placed on CORELS' models if desired, though one would need to edit our bounds (\S\ref{sec:framework}) and implementation (\S\ref{sec:implementation}) in order to impose more constraints.
 
-COMPAS is a proprietary model, constructed from a proprietary dataset involving surveys that are not available in any form.
+[??FIXME??] COMPAS is a proprietary model, constructed from a proprietary dataset involving surveys that are not available in any form.
 %
 The United States government pays Northpointe (now called Equivant) to use COMPAS.
 %
 In light of our observations that CORELS is as accurate as COMPAS, CORELS' models are completely transparent, and CORELS predicts similarly to COMPAS for both blacks and whites, it is not clear what the value of using COMPAS is.
 %
-Further, our experiments indicate that the proprietary survey data required to compute COMPAS does not have value, as it does not increase prediction accuracy.
+Further, our experiments indicate that the proprietary survey data [??FIXME??] required to compute COMPAS does not have value, as it does not increase prediction accuracy.
 
 Regardless of whether COMPAS is racially biased (which our analysis does not indicate is true),
 COMPAS may have many other fairness defects that might be considered to be serious.
