--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -69,15 +69,15 @@
 \input{sections/conclusion}
 
 % Acknowledgements should go at the end, before appendices and references
-\acks{E.A. is supported by the Miller Institute for Basic Research in Science,
-University of California, Berkeley, and is hosted by Prof. M.I. Jordan at RISELab.
+\acks{E.A. conducted most of this work while supported by the Miller Institute for Basic Research
+in Science, University of California, Berkeley, and hosted by Prof. M.I. Jordan at RISELab.
 %
 C.D.R. is supported in part by MIT-Lincoln Labs.
 %
-E.A. would like to thank E. Jonas, E. Kohler, and S. Tu for early implementation
+E.A. would like to thank E.~Jonas, E.~Kohler, and S.~Tu for early implementation
 guidance, A.~D'Amour for pointing out the work by~\citet{Goel16},
 M.I.J. for pointing out the work by~\citet{Bertsimas16},
-which inspired the section on algorithmic speedup~(\S\ref{sec:speedup}),
+which inspired the section on algorithmic speedup~(\S\ref{sec:speedup}), V.~Kanade, S.~McCurdy,
 J.~Schleier-Smith and E.~Thewalt for helpful conversations, and members of RISELab,
 SAIL, and the UC Berkeley Database Group for their support and feedback.
 %
