Add CPW figs and unfinished writing from new-analysis branch Aug 24
Explained the dataset, need to explain figures

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -923,6 +923,13 @@ title = "{UCI} Machine Learning Repository",
 note={\url{http://archive.ics.uci.edu/ml}},
 institution = "University of California, Irvine, School of Information and Computer Sciences" }
 
+@misc{nypd,
+title = "Stop, Question and Frisk Data",
+note = {\url{http://www1.nyc.gov/site/nypd/stats/reports-analysis/stopfrisk.page}},
+author = {{New York Police Department}},
+year = 2016
+}
+
 @misc{nyclu:2014,
 title = "Stop-and-Frisk Data",
 note = {\url{http://www.nyclu.org/content/stop-and-frisk-data}},
