Minor caption edits, unfinished

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -347,7 +347,7 @@ width=0.9\textwidth]{figs/cpw_folds.pdf}
 width=0.9\textwidth]{figs/cpw_tpr_fpr.pdf}
 \end{center}
 \caption{NYPD stop-and-frisk dataset.
-(Top)  Fraction of weapons recovered as a function of the fraction of stops
+Top: Fraction of weapons recovered as a function of the fraction of stops
 where the individual was frisked and/or searched,
 for various models learned by CORELS (red markers) and the heuristic model by~\citet{Goel16}.
 %
@@ -361,7 +361,7 @@ The results we report for the heuristic model (blue markers)
 are our reproduction of the results reported in Figure 9 by~\citet{Goel16}
 (first four open circles, from left to right; we exclude the trivial open circle
 showing 100\% of weapons recovered at 100\% of stops, obtained by setting the threshold at 0).
-(Bottom)
+Bottom: [??FIXME??]
 }
 \label{fig:frisk}
 \end{figure}
