--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -387,14 +387,18 @@ We use the same antecedent sets as input to the two rule list learning algorithm
 for the other algorithms, the inputs are binary feature sets corresponding to the
 single clause antecedents in the aforementioned antecedent sets (see Appendix~\ref{appendix:data}).
 
-Figure~\ref{fig:comparison} shows that for the ProPublica dataset (left),
+Figure~\ref{fig:compas-comparison} shows that for the ProPublica dataset,
 there were no statistically significant differences in test accuracies across algorithms;
 the difference between folds was far larger than the difference between algorithms.
 %
-For the NYCLU dataset (right), the differences between algorithms are more significant,
-with CART, random forests, and CORELS performing the best.
+Figure~\ref{fig:weapon-comparison} shows that for the NYCLU dataset,
+the TPR's across algorithms are similar, while FPR's show more variation;
+we show TPR and FPR due to class imbalance.
 %
-We conclude that CORELS produces models whose accuracy is comparable to or better than
+For this problem, CORELS obtains a TPR that is statistically close to the best performing algorithms,
+while achieving a significantly lower FPR.
+%
+We conclude that CORELS produces models whose predictive performance is comparable to or better than
 those found via other algorithms.
 
 Figures~\ref{fig:sparsity-compas} and~\ref{fig:sparsity-weapon} summarize differences
@@ -420,32 +424,45 @@ for CORELS summarized here, see Appendix~\ref{appendix:examples}.
 \begin{center}
 %\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
 % left lower right upper
-\includegraphics[trim={2mm, 10mm, 2mm, 0mm},
-width=\textwidth]{figs/compare-compas-weapon.pdf}
+%\includegraphics[trim={2mm, 10mm, 2mm, 0mm}, width=\textwidth]{figs/compare-compas-weapon.pdf}
+\includegraphics[trim={2mm, 5mm, 102mm, 0mm}, clip,
+width=0.6\textwidth]{figs/compare-compas-weapon.pdf}
 \end{center}
-\caption{Comparison of CORELS and a panel of eight other algorithms:
+\caption{Two-year recidivism prediction for the ProPublica COMPAS dataset.
+%
+Comparison of CORELS and a panel of eight other algorithms:
 logistic regression~(GLM), support vector machines~(SVM),
 AdaBoost, CART, C4.5, random forests~(RF), RIPPER,
 scalable Bayesian rule lists~(SBRL).
 %
-Test accuracy means (white squares),
+For CORELS, we use regularization parameter~${\Reg=0.005}$.
+}
+\label{fig:compas-comparison}
+\end{figure}
+%
+\begin{figure}[t!]
+\begin{center}
+%\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
+% left lower right upper
+\includegraphics[trim={2mm, 10mm, 2mm, 0mm},
+width=\textwidth]{figs/compare-weapon.pdf}
+\end{center}
+\caption{TPR (left) and FPR (right) for the test set,
+for CORELS and a panel of seven other algorithms,
+for the weapon prediction problem with the NYCLU stop-and-frisk dataset.
+%
+Means (white squares),
 standard deviations (error bars),
 and values (colors correspond to folds),
 for 10-fold cross-validation experiments.
-%
-Left:~Two-year recidivism prediction for the ProPublica COMPAS dataset.
-%
-For CORELS, we use regularization parameter~${\Reg=0.005}$.
-%
-Right:~Weapon prediction for the NYCLU stop-and-frisk dataset.
 %
 For CORELS, we use~${\Reg=0.01}$.
 %
 Note that we were unable to execute RIPPER for the NYCLU problem.
 }
-\label{fig:comparison}
+\label{fig:weapon-comparison}
 \end{figure}
-%
+
 \begin{figure}[t!]
 \begin{center}
 %\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
@@ -482,7 +499,7 @@ width=0.8\textwidth]{figs/weapon-sparsity-tpr.pdf}
 \includegraphics[trim={17mm, 10mm, 27mm, 4mm},
 width=0.8\textwidth]{figs/weapon-sparsity-fpr.pdf}
 \end{center}
-\caption{True positive rate (top) and false positive rate (bottom)
+\caption{TPR (top) and FPR (bottom)
 for the test set, as a function of model size, across different methods,
 for weapon prediction with the NYCLU stop-and-frisk dataset.
 %
