Elaine's edits to COMPAS paragraphs

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -944,6 +944,13 @@ author = {Northpointe},
 year = 2016
 }
 
+@misc{npr-bail:2017,
+title = {Did A Bail Reform Algorithm Contribute To This {S}an {F}rancisco Man's Murder?},
+note = {\url{https://www.npr.org/2017/08/18/543976003/did-a-bail-reform-algorithm-contribute-to-this-san-francisco-man-s-murder}},
+author = {Eric Westervelt},
+year = 2017
+}
+
 @InProceedings{Simon11,
 author = {Gy\"{o}rgy J. Simon and Vipin Kumar and Peter W. Li},
 title = {A Simple Statistical Model and Association Rule Filtering for Classification},
