--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -38,7 +38,8 @@ for the ProPublica dataset, found by CORELS.
 
 Optimality is important, because there are societal implications for a lack of optimality.
 %
-Consider the recent ProPublica article on the COMPAS recidivism prediction tool~\citep{LarsonMaKiAn16}.
+Consider the recent ProPublica article on the Correctional Offender Management Profiling for Alternative Sanctions
+(COMPAS) recidivism prediction tool~\citep{LarsonMaKiAn16}.
 %
 It highlights a case where a black-box, proprietary predictive model is being used for recidivism prediction.
 %
