Drop in Cynthia's new discussion and conclusion

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -24,12 +24,13 @@ year={2015},
 note={Unpublished}
 }
 
-@unpublished{ChenRu17,
-__author={Chaofan Chen and Cynthia Rudin},
-author={C. Chen and C. Rudin},
-title={Optimized Falling Rule Lists and Softly Falling Rule Lists},
-note={Work in progress},
-year={2017}
+@article{ChenRu17,
+  __author  = {Chaofan Chen and Cynthia Rudin},
+  author    = {C. Chen and C. Rudin},
+  title     = {An optimization approach to learning falling rule lists},
+  journal   = {CoRR},
+  volume    = {abs/1710.02572},
+  year      = {2017}
 }
 
 @inproceedings{LakkarajuRu17,
