--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -532,6 +532,7 @@ C4.5 finds large models for all tested parameters.
 \label{fig:sparsity-weapon}
 \end{figure}
 
+\newpage
 \subsection{CORELS execution traces, for different regularization parameters}
 \label{sec:reg-param}
 In this section, we illustrate several views of CORELS execution traces,
@@ -986,7 +987,7 @@ requires more than an hour, \ie orders of magnitude more time, to complete (thic
 \subsection{Algorithmic Speedup}
 \label{sec:speedup}
 
-\begin{table}[b!]
+\begin{table}[t!]
 \vspace{5mm}
 \centering
 \begin{tabular}{l|c|c|r l}
