Add reference to ablation section in discussion

--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -63,7 +63,8 @@ or the looser Proposition~\ref{prop:remaining-eval-coarse}, which incurs less
 computational overhead---since these provide meaningful information about algorithm
 progress and allow us to estimate the remaining execution time.
 %
-These calculations also help us qualify the impact of different algorithmic bounds,
+As we illustrated in Section~\ref{sec:ablation},
+these calculations also help us qualify the impact of different algorithmic bounds,
 \eg by comparing executions that keep or remove~bounds.
 
 When our algorithm terminates, it outputs an optimal solution of the training optimization problem, with a certificate of optimality.
